This commit makes a bunch of changes (sorry):
* Rewrite importing to only spawn BlobImporters for blobs that probably have
  strings in them. In the process, refactor the separation of concerns between
  Blob, Commit, and BlobImporter.
* Rewrite all importer-based specs to actually do an import of a real Git
  repository (stored locally in spec/fixtures), bringing importer specs closer
  to acceptance tests.
* Be consistent about how importers are referenced in the data model. Now
  all importers are referenced by ident, never by class name.
* Fix a bug that would cause imports to abort fast with no keys

--- a/app/views/projects/edit.js.erb
+++ b/app/views/projects/edit.js.erb
@@ -71,7 +71,7 @@ $(document).ready(function() {
           <% Importer::Base.implementations.each do |importer| %>
             $('<option/>').
                     text("<%= escape_javascript importer.human_name %>").
-                    attr({value: "<%= escape_javascript importer.to_s %>", selected: key == "<%= escape_javascript importer.to_s %>" ? 'selected' : ''}).
+                    attr({value: "<%= escape_javascript importer.ident %>", selected: key == "<%= escape_javascript importer.ident %>" ? 'selected' : ''}).
                     appendTo(select);
           <% end %>
           select.val(key);
