--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,4 +1,5 @@
-body#home-reviewers, body#home-translators {
+body#home-reviewers,
+body#home-translators {
   #locale input {
     font-size: 24px;
     width: 100%;
