Due date form select elements do not wrap and have no width.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -75,6 +75,12 @@ body#home-translators {
   td.description {
     word-break: break-all;
   }
+  td.due-date {
+    white-space: nowrap;
+    select {
+      width: auto !important
+    }
+  }
 }
 
 .edit_commit {
