fixed stuff that tim said

--- a/app/views/commit_mailer/notify_translation_finished.text.erb
+++ b/app/views/commit_mailer/notify_translation_finished.text.erb
@@ -1,4 +1,4 @@
-Translation of commit <%=@commit.project_id %> is finished on Shuttle!
+Translation of commit <%=@commit.revision[0,6] %> on <%=@commit.project.name %> is finished on Shuttle!
 
 SHA: <%= @commit.revision %>
 
