Move translation memory pages under search; expand specs

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -75,3 +75,11 @@ td.loading {
 .icon-refresh.spinning {
   display: inline-block;
 }
+
+.filter {
+  margin: 1em 0;
+  margin-bottom: 0;
+  padding: 0.5em;
+  background-color: #eee;
+  border-radius: 8px;
+}
