--- a/app/views/home/index.css
+++ b/app/views/home/index.css
@@ -1,15 +1,18 @@
 #commits .locale-field {
     width: 100px;
 }
+
 .request-translation-form {
-  display: none;
-  margin-bottom: 4em;
+    display: none;
+    margin-bottom: 4em;
 }
 
-.home-container  {
-  position: relative;
+.home-container {
+    position: relative;
 }
+
 .show-request-translation-form-link {
-  position: absolute;
-  right: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
