--- a/app/views/home/glossary.js.erb
+++ b/app/views/home/glossary.js.erb
@@ -12,6 +12,17 @@
 //    See the License for the specific language governing permissions and
 //    limitations under the License.
 
+$('#alphabet-bar').affix({
+  offset: {
+    top: 120
+  }
+});
+
+$('[data-behaviour~=datepicker]').datepicker();
+
+// Not Working yet
+$('#alphabet-bar').scrollspy();
+
 $(document).ready(function() {
   new GlossaryList(
     $('#locale'),
