Fixed up the controllers.
TODO:
Locale Glossary Entries Controller: Make it such that if it is approved, it can't be changed unless
unapproved.
Source Glossary Entry: Add due date

--- a/app/views/home/glossary.js.erb
+++ b/app/views/home/glossary.js.erb
@@ -20,6 +20,8 @@ $('#alphabet-bar').affix({
 
 $('[data-behaviour~=datepicker]').datepicker();
 
+console.log("<%= source_glossary_entries_url %>");
+
 // Not Working yet
 $('#alphabet-bar').scrollspy();
 
