--- a/app/views/glossary/index.js.coffee.erb
+++ b/app/views/glossary/index.js.coffee.erb
@@ -26,10 +26,11 @@ $(document).ready () ->
     ["British English", "be"],
     ["Japanese", "jp"]
   ]
-  glossaryList = new GlossaryList(
+  new GlossaryList(
     $('#glossary-table'), "<%= glossary_sources_url %>", "<%= remote_locales_url %>", 
-    "<%= edit_glossary_source_url("REPLACEME_SOURCE") %>", "<%= edit_glossary_source_locale_url("REPLACEME_SOURCE", "REPLACEME_LOCALE") %>"
-    $('#settings-modal'), $('#add-term-form'), "<%= glossary_sources_url %>",
+    "<%= glossary_sources_url(format:'json') %>", "<%= glossary_source_locales_url("REPLACEME_SOURCE", format:'json') %>",
+    "<%= edit_glossary_source_url("REPLACEME_SOURCE") %>", "<%= edit_glossary_source_locale_url("REPLACEME_SOURCE", "REPLACEME_LOCALE") %>",
+    $('#settings-modal'), $('#add-entry-modal'),
     <%= current_user.translator? %>, <%= current_user.reviewer? %>,
     <%= current_user.admin?? '"admin"' : current_user.approved_rfc5646_locales.to_json %>
   );
