--- a/app/views/locale/projects/show.js.erb
+++ b/app/views/locale/projects/show.js.erb
@@ -16,7 +16,13 @@ $(document).ready(function() {
   new TranslationPanel($('#strings'),
                        $('#filter'),
                        "<%= locale_project_translations_url(@locale, @project, format: 'json') %>",
-                       <%= GlossaryEntry.where(rfc5646_locale: @locale.rfc5646, approved: true).map(&:as_translation_json) %>,
+                       <%= LocaleGlossaryEntry.joins(:source_glossary_entry)
+                          .where(
+                            source_glossary_entries: {source_rfc5646_locale: "en", }, 
+                            rfc5646_locale: @locale.rfc5646,
+                            approved: true)
+                          .map(&:as_translation_json)
+                          .select { |json| !json.nil? } %>,
                        {
                            review: <%= current_user.reviewer?.inspect %>,
                            word_substitute_url: <%= @word_substitute_url ? @word_substitute_url.inspect : 'null' %>
