--- a/app/views/glossary/index.js.coffee.erb
+++ b/app/views/glossary/index.js.coffee.erb
@@ -16,10 +16,9 @@ $('#alphabet-bar').affix(
   offset: 
     top: 120
 );
-# $('#alphabet-bar').scrollspy(); ## TODO: Make scrollspy work
 
 $(document).ready () ->
-      # Defaults source/target locales
+  # Default source/target locales
   sourceLocale = {
       flagUrl: "/assets/country-flags/en.png"
       locale: "English"
