--- a/app/views/glossary/source_glossary_entries/edit.css.scss
+++ b/app/views/glossary/source_glossary_entries/edit.css.scss
@@ -48,3 +48,13 @@
   }
 }
 
+#btn-update-entry {
+  float: right; 
+  width: 200px;
+}
+
+#btn-destroy-entry {
+  float: right; 
+  width: 200px;
+  @include border-box; 
+}
