--- a/app/views/glossary/source_glossary_entries/edit.css
+++ b/app/views/glossary/source_glossary_entries/edit.css
@@ -25,3 +25,15 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
+
+#btn-update-entry {
+  float: right; 
+  width: 200px;
+}
+
+#btn-destroy-entry {
+  float: right; 
+  width: 200px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
