Made more fixes.  Added delete confirmation.  Added due date for edit page

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -29,7 +29,7 @@
 // Example:
 // @linkColor: #ff0000;
 
-// Block level input append/prepend
+// Enables input append/prepend buttons to still remain 100% width in a block
 
 .input-append.input-block-level,
 .input-prepend.input-block-level {
@@ -58,7 +58,8 @@
   border-left: 0;
 }
 
-// Twitter Typeahead.js
+// Twitter Typeahead.js.  Needed to override default Bootstrap typeahead.js behavior
+
 .typeahead { 
   margin-top: 0px;
 }
