--- a/app/views/glossary/source_glossary_entries/edit.css.scss
+++ b/app/views/glossary/source_glossary_entries/edit.css.scss
@@ -48,13 +48,7 @@
   }
 }
 
-#btn-update-entry {
+#btn-update-entry, #btn-confirm-delete {
   float: right; 
   width: 200px;
-}
-
-#btn-destroy-entry {
-  float: right; 
-  width: 200px;
-  @include border-box; 
 }
