--- a/app/views/glossary/index.js.coffee.erb
+++ b/app/views/glossary/index.js.coffee.erb
@@ -24,11 +24,8 @@ $(document).ready () ->
   
   # Create a new glossary entry list
   new GlossaryList(
-    $('#glossary-table'), "<%= glossary_sources_url %>", 
+    $('#glossary-table'), "<%= glossary_sources_url %>", "<%= glossary_sources_url(format:'json') %>"
     "<%= typeahead_locales_url %>", sourceLocale, targetLocales,
-    "<%= glossary_sources_url(format:'json') %>", "<%= glossary_source_locales_url("REPLACEME_SOURCE", format:'json') %>",
-    "<%= edit_glossary_source_url("REPLACEME_SOURCE") %>", "<%= edit_glossary_source_locale_url("REPLACEME_SOURCE", "REPLACEME_LOCALE") %>",
-    "<%= approve_glossary_source_locale_url("REPLACEME_SOURCE", "REPLACEME_LOCALE") %>", "<%= reject_glossary_source_locale_url("REPLACEME_SOURCE", "REPLACEME_LOCALE") %>",
     $('#settings-modal'), $('#add-entry-modal'),
     "<%= current_user.role %>", <%= current_user.approved_rfc5646_locales.to_json %>
   );
